--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
+    <meta charset="UTF-8">
 	<title>SysGymIf</title>
 </head>
 <body>
@@ -9,27 +10,17 @@
 			<a href="#" class="list-group-item list-group-item-action list-group-item-primary active">Active item</a>
 			<a href="#" class="list-group-item list-group-item-action list-group-item-primary">Item</a>
 			<a href="#" class="list-group-item list-group-item-action list-group-item-primary disabled">Disabled item</a>
-			<table>
-				<th>teste</th>
-				<th>teste</th>
-				<th>teste</th>
-				<th>teste</th>
-				<td>não</td>
-				<td>não</td>
-				<td>não</td>
-			</table>
-			<tbody>
-				<td>teste novo</td>
-				<td>teste novo</td>
-				<td>teste novo</td>
-				<td>teste novo</td>
-			</tbody>
-			<thead>
-				<th>não eeeee</th>
-				<th>não eeeee</th>
-				<th>não eeeee</th>
-				<th>não eeeee</th>
-			</thead>
+			<div>
+				<h3># Projeto-Web-I</h3>
+			<h3>desenvolvido para matéria de  Laboratório de Programação Web I<br>
+			estaremos usando PHP com mysql e modelo MVC</h3>
+			<img src="https://www.educabras.com/media/faculdades/image/ifbaiano.png">
+			<img src="https://www.ifbaiano.edu.br/unidades/bonfim/files/2011/05/Academia.png">
+
+			<h1>## SysGymIf</h1>
+			<h2>### Sistema para gerenciar alunos na academia do IFBaiano</h2>
+
+			</div>
 		</div>
 	</div>
 </body>
