--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
+
+	<style type="text/css">
+		body{background-color: rgb(172, 216, 209);}
+
+		#corpo{width: 1000px; background-color: aliceblue; margin: 0%;}
+	</style>
     <meta charset="UTF-8">
 	<title>SysGymIf</title>
 </head>
