--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-
+	<link rel="shortcut icon" href="img/favicon1.png" type="image/x-icon">
 	<style type="text/css">
 		body{background-color: rgb(172, 216, 209);}
 
