--- a/paginas/Discente/DisceTela3.html
+++ b/paginas/Discente/DisceTela3.html
@@ -32,10 +32,10 @@
 			</div><!--academiaDoCampus-->
 
 			<div class="painelDeEscolha">
-				<input type="submit" name="Regulamento" value="Regulamento">
-				<input type="submit" name="Horários" value="Horários">
-				<input type="submit" name="Agendamento" value="Agendamento">
-				<input type="submit" name="Notas" value="Notas">
+				<a href="./DisceTela1.html"><input type="submit" name="Regulamento" value="Regulamento"></a>
+				<a href="./DisceTela2.html"><input type="submit" name="Horários" value="Horários"></a>
+				<a href="./DisceTela3.html"><input type="submit" name="Agendamento" value="Agendamento"></a>
+				<a href="./DisceTela4.html"><input type="submit" name="Notas" value="Notas"></a>
 
 			</div><!--painelDeEscolha-->
 		</div><!--container-->
